--- a/task3_4/index.html
+++ b/task3_4/index.html
@@ -6,11 +6,10 @@
     <meta http-equiv="Content-type" content="text/html; charset=utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=Edge">
     <link rel="stylesheet" href="css/styles.css" type="text/css">
-    <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Oswald:400,300" type="text/css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://fonts.googleapis.com/css?family=Muli:400,600,700|Radley" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css" rel="stylesheet">
-    <link href="style.css" rel="stylesheet">
+
 </head>
 <header>
     <div class="container">
@@ -73,7 +72,9 @@
             </div>
             <p class="likes" align="left"><b>10023 likes</b></p>
             <p class="description" align="left">#figureskating Figure skating at the Olympiad-2018!</p>
+            <p class="location" align="left"><em>Beijing, China</em></p>
             <p class="data" align="left"><em>01.12.2018</em></p>
+
             <div class="line">
             </div>
         </div>
@@ -95,6 +96,7 @@
             </div>
             <p class="likes" align="left"><b>10230 likes</b></p>
             <p class="description" align="left">Let's enjoy the biathlon!</p>
+            <p class="location" align="left"><em>Beijing, China</em></p>
             <p class="data" align="left"><em>11.11.2018</em></p>
             <div class="line">
             </div>
@@ -119,6 +121,7 @@
             </div>
             <p class="likes" align="left"><b>123 likes</b></p>
             <p class="description" align="left">It was a great game!</p>
+            <p class="location" align="left"><em>Beijing, China</em></p>
             <p class="data" align="left"><em>10.11.2018</em></p>
             <div class="line">
             </div>
@@ -143,6 +146,7 @@
             </div>
             <p class="likes" align="left"><b>103 likes</b></p>
             <p class="description" align="left">I will do it! Thanks all for the support</p>
+            <p class="location" align="left"><em>Beijing, China</em></p>
             <p class="data" align="left"><em>05.04.2018</em></p>
             <div class="line">
             </div>
@@ -167,6 +171,7 @@
             </div>
             <p class="likes" align="left"><b>1030 likes</b></p>
             <p class="description" align="left">Unbelivable!</p>
+            <p class="location" align="left"><em>Beijing, China</em></p>
             <p class="data" align="left"><em>02.02.2018</em></p>
             <div class="line">
             </div>
@@ -191,6 +196,7 @@
             </div>
             <p class="likes" align="left"><b>1300 likes</b></p>
             <p class="description" align="left">Norway forever!</p>
+            <p class="location" align="left"><em>Beijing, China</em></p>
             <p class="data" align="left"><em>01.01.2018</em></p>
             <div class="line">
             </div>
@@ -215,6 +221,7 @@
             </div>
             <p class="likes" align="left"><b>10340 likes</b></p>
             <p class="description" align="left">#great #figureskating Figure skating at the Olympiad-2018!</p>
+            <p class="location" align="left"><em>Beijing, China</em></p>
             <p class="data" align="left"><em>01.12.2017</em></p>
             <div class="line">
             </div>
@@ -239,6 +246,7 @@
             </div>
             <p class="likes" align="left"><b>1040 likes</b></p>
             <p class="description" align="left">#ronaldo #football Football match!</p>
+            <p class="location" align="left"><em>Beijing, China</em></p>
             <p class="data" align="left"><em>04.05.2017</em></p>
             <div class="line">
             </div>
@@ -263,6 +271,7 @@
             </div>
             <p class="likes" align="left"><b>1007 likes</b></p>
             <p class="description" align="left">Hockey!</p>
+            <p class="location" align="left"><em>Beijing, China</em></p>
             <p class="data" align="left"><em>02.03.2017</em></p>
             <div class="line">
             </div>
@@ -286,6 +295,7 @@
             </div>
             <p class="likes" align="left"><b>16700 likes</b></p>
             <p class="description" align="left">#gymnastic Just enjoy it</p>
+            <p class="location" align="left"><em>Beijing, China</em></p>
             <p class="data" align="left"><em>01.01.2017</em></p>
             <div class="line">
         </div>
@@ -296,6 +306,10 @@
 </div>
 
 </body>
+
+<script src = "js/js.js"></script>
+<script src="js/jsFunctions.js"></script>
+
 <footer>
     <div class="container">
         <div class="line">
