--- a/task3_4/index.html
+++ b/task3_4/index.html
@@ -307,7 +307,7 @@
 
 </body>
 
-<script src = "js/js.js"></script>
+<script src = "js/PostActions.js"></script>
 <script src="js/jsFunctions.js"></script>
 
 <footer>
