added task 7 and 9

--- a/task7/UI/index.html
+++ b/task7/UI/index.html
@@ -65,6 +65,8 @@
 <script src = "js/PostsList.js"></script>
 <script src="js/PostsActionsClass.js"></script>
 <script src="js/ScriptWithDOM.js"></script>
+<script src="js/MVCFunctions.js"></script>
+<script src="js/ScriptWithDOM.js"></script>
 
 <footer>
     <div class="container">
